feat(front-end): updating several changes on the server side and client app for store front

--- a/apps/client/src/index.css
+++ b/apps/client/src/index.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+.product-card:hover {
+  transform: scale(1.02);
+}
+
 /* Scale up hit targets on high resolution mobile devices. */
 @media (min-resolution: 200dpi) {
   html {
