--- a/apps/client/src/index.css
+++ b/apps/client/src/index.css
@@ -12,7 +12,7 @@
 }
 
 .collection-item-name:hover{
-  color: red
+  color: #1967d2
 }
 
 .product-image-container {
@@ -23,6 +23,17 @@
   margin-right: 10px;
 }
 
+.text-blue-600 {
+  color: #1967d2;
+}
+
+.bg-blue-600 {
+  background-color: #1967d2;
+}
+
+.border-blue-600 {
+  border-color: #1967d2;
+}
 /* Scale up hit targets on high resolution mobile devices. */
 @media (min-resolution: 200dpi) {
   html {
